k8s/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
spec:
  defaultBackend:
    service:
      name: grafana-service
      port:
        number: 3000
  rules:
    - host: grafana.192.168.56.10.nip.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: grafana-service
                port:
                  number: 3000
  ingressClassName: nginx
